# ai-security-agent

./: .env  .gitignore  AGENTS.md  CHANGELOG.md  README.md  Ultra2025KnowledgeBase.jsx  git.ignore  pyproject.toml  requirements.txt  simplepdfviewer.jsx
.github/chatmodes/: developer.prompt.md.chatmode.md  plan.prompt.md.chatmode.md  qa.prompt.md.chatmode.md
configs/: palo_tag_rules.yml
docker/: docker-compose.yml
docs/: # AI 資安機器人 MVP 測試計畫（POC）測試用例.md  AI資訊安全RAG Chat機器人 - OAuth增強版系統.md  AI資訊安全RAG Chat機器人 - 專案總結.md  AI資訊安全RAG Chat機器人 - 部署成功指南.md  AI資訊安全RAG Chat機器人 - 部署指南.md  AI資訊安全RAG Chat機器人 🛡️.md  AI資訊安全RAG Chat機器人.md  Azure_AI_Agent_Integration_Guide.md  Microsoft_OAuth_Setup_Guide.md  Multi_Agent_Search_Integration.md  OAuth_Setup_Guide.md  OAuth設定指南.md  OAuth認證架構設計.md  flask_to_fastapi.md  knowledge_base_design.md  postgres_hybrid_search.md  requirements_analysis.md  sample_knowledge_data.md  test_report.md  todo.md  文件檢索功能測試計畫.md
src/: __init__.py  main.py
src/agents/: __init__.py  security_agent.py
src/core/: testing.py
src/models/: auth.py  palo.py  routing.py  schemas.py
src/routers/: ag_ui_router.py  auth_router.py  file_router.py  postgres_search_router.py  pydantic_ai_router.py  rag_router.py  router_core.py  security_router.py
src/routes/: ag_ui_api.py  auth_api.py  auth_api_fixed.py  file_api.py  rag_api.py
src/services/: ai_agent_service.py  auth_service.py  azure_document_service.py  azure_openai_service.py  azure_search_service.py  fastapi_app.py  file_upload_extension.py  oauth_service.py  palo_log_service.py  postgres_hybrid_service.py  vectorization_service.py
src/services/experimental/: intelligent_security_router.py  pydantic_ai_router.py  smart_routing_service.py
src/services/stable/: ai_agent_account_security.py  ai_agent_general_response.py  ai_agent_network.py  ai_agent_threat.py  (+6 more)
src/static/: fix-login.html  index.html  login-redirect.html  login.html  oauth-callback.html  oauth-config.html  set-session.html
src/tools/: azure_aisearch_tool.py  postgres_hybrid_search.py  router_tools.py
test_files/: sample_security_report.txt
tests/: conftest.py  test_ag_ui_awp.py  test_ai_agent_service.py  test_ai_functionality.py  test_architecture.py  test_auth_api.py  test_azure_ai_agent.py  test_azure_ai_search.py  test_azure_ai_search_live.py  test_azure_ai_search_unit.py  test_azure_integration.py  test_azure_mvp.py  test_azure_openai_service.py  test_azure_search_integration.py  test_azure_services.py  test_database_integration.py  test_debug_download.py  test_document_answering_comprehensive.py  test_document_search.py  test_file_management.py  test_github_oauth.html  test_github_oauth_complete.html  test_integration_flow.py  test_rag_api.py  test_real_document_functionality.py  test_ui.py  test_upload.py  test_vectorization_service.py
