[project]
name = "ai-security-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "aaronliu_xcloud",email = "aaron_l@cloudinfo.com.tw"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "blinker==1.9.0",
    "click==8.2.1",
    "Flask==3.1.1",
    "flask-cors==6.0.0",
    "Flask-SQLAlchemy==3.1.1",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.2",
    "SQLAlchemy==2.0.41",
    "typing_extensions==4.14.0",
    "Werkzeug==3.1.3"
    ,"pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
